clusters/k3s/apps/automation/cleanuparr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cleanuparr
  namespace: docker-services
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - cleanuparr.erwanleboucher.dev
    secretName: cleanuparr-tls
  rules:
  - host: cleanuparr.erwanleboucher.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cleanuparr
            port:
              number: 11011
